--- a/css/styles.css
+++ b/css/styles.css
@@ -58,15 +58,17 @@ color: var(--main-color);
 margin: 0;
 }
 
-/* .container {
-   width: 1158px;
-   margin-left: auto;
-   margin-right: auto;
+
+.container {
    padding-left: 15px;
    padding-right: 15px;
-} */
-/* .section{padding-top: 120px;
-padding-bottom: 120px;}  */
+   /* margin: 0 auto; */
+}
+
+.section {
+   padding-top: 96px;
+   padding-bottom: 96px;
+}
 
 /* ===============modal window menu=================== */
 
@@ -135,15 +137,7 @@ padding-bottom: 120px;}  */
 }
 
 /*===============HEADER===========*/
-.container{
-   padding-left: 15px;
-   padding-right: 15px;
-   margin:0 auto;
-}
-.section {
-   padding-top: 96px;
-   padding-bottom: 96px;
-}
+
 
 /* MENU */
 .header {
@@ -185,8 +179,8 @@ padding-bottom: 120px;}  */
 
 /* ================HERO================== */
 .hero {
-   max-width: 767px;
-   height: 436px;
+   max-width: 468px;
+   height: 432px;
    margin-left: auto;
    margin-right: auto;
    background-repeat: no-repeat;
@@ -196,7 +190,21 @@ padding-bottom: 120px;}  */
          rgba(46, 47, 66, 0.7)),
       url('../images/heromobile.jpg');
    background-color: #434455;
-
+}
+.main-title {
+   font-weight: var(--primary-font-weight);
+   font-size: 36px;
+   line-height: 1.11;
+   letter-spacing: 0.02em;
+   color: #FFFFFF;
+   text-align: center;
+   margin-bottom: 72px;
+   align-items: center;
+   justify-content: center;
+   text-transform: capitalize;
+   /* padding-top: 112px; */
+   /* padding-bottom: 240px; */
+   
 }
 
 .hero-button {
@@ -228,17 +236,63 @@ padding-bottom: 120px;}  */
    justify-content: center;
 }
 
+/* =======================About us=============== */
+
+.about-us-container {
+   display:none;
+}
+.about-us {
+   display: flex;
+   flex-wrap: wrap;
+
+}
+
+
+/* .subtitle {
+   justify-content: center;
+   text-align: center;
+   font-family: 'Roboto';
+   font-style: normal;
+   font-weight: 700;
+   font-size: 36px;
+   line-height: 1.11;
+   text-align: center;
+   letter-spacing: 0.02em;
+   text-transform: capitalize;
+   color: #2E2F42;
+   margin-bottom: 8px;
+
+} */
+
+
+/* .text-title {
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   color: #434455;
+   margin-bottom: 8px;
+} */
+
+
+/* .text-title {
+   font-family: 'Roboto';
+   font-weight: 500;
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   color: #434455;
+
+} */
+
 
 /* =====+=========OUR TEAM=========== */
 .workers-list{
-   /* display: flex;
-   flex-wrap: wrap; */
+   display: flex;
+   flex-wrap: wrap;
       gap: 24px;
       width: 100%;
-      margin right: 82px;
-      margin left: 82px;
+      justify-content: center;
    }
-
 
 .card-content {
    padding: 32px 16px;
@@ -251,18 +305,18 @@ padding-bottom: 120px;}  */
 }
 
 .team-list{
-   background-color:  #F4F4FD;;
+   background-color:  #F4F4FD;
 }
-/* .secondary-title{
-      font-weight: var(--primary-font-weight);
-      font-size: 36px;
-      line-height: 1.11;
-      letter-spacing: 0.02em;
-      color: var(--main-color);
-      margin-bottom: 69px;
-      text-align: center;
-      
+.secondary-title {
+   font-weight: var(--primary-font-weight);
+   font-size: 36px;
+   line-height: 1.11;
+   letter-spacing: 0.02em;
+   color: var(--main-color);
+   margin-bottom: 69px;
+   text-align: center;
 }
+/* 
 .subtitle{
       font-weight: var(--primary-font-weight);
       font-size: 20px;
@@ -300,29 +354,406 @@ padding-bottom: 120px;}  */
    background-color:#4D5AE5;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
    
+} 
+/* ===================CUSTOMERS================ */
+  .customer-list {
+    display: flex;
+    flex-wrap: wrap;
+    /* column-gap: 16px;
+    row-gap: 72px; */
+    justify-content: center;
+ } 
+
+ .customer-linkk {
+    width:calc((100% - 32px) / 2)
+ }
+ .customer-linkk{
+   margin-right: 16px;
+   margin-bottom: 72px;
+ }
+ .customer-linkk:nth-child(2n){
+   margin-right: 0px;
+ }
+ 
+/* .customer-list{
+   display: flex;
+   display: wrap;
+   justify-content: center;
+   gap: 24px;}  */
+   /* width: calc((100%-30px) /2);
+   height:92px;*/
+
+.customer-list-link{
+   width: 168px;
+   height: 88px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.customer-list-link:hover .customer-list-icon,
+.customer-list-link:focus .customer-list-icon{
+   fill: #4D5AE5;
+}
+.customer-list-icon{
+   border: 1px solid #8E8F99;
+      border-radius: 4px;
+      width: 190px;
+         height: 88px;
+         padding: 16px, 40px;
+         fill: #8E8F99;
+         transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.customer-list-link
+.customer-list-icon:hover,
+.customer-list-icon:focus{
+   border: 1px solid #4D5AE5;
 }
 
-@media screen and (min-width: 480px) {
+/* @media screen and (min-width: 480px) {
    .container
    {
       width: 426px;
       margin-left: auto;
       margin-right: auto;
    }
+@media (min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+   .hero {
+      background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+            rgba(46, 47, 66, 0.7)),
+         url('../images/heromobile@2x.jpg');
+      background-color: #434455;
+   }
    
-}
+   }
+      .workers-list {
+         display: flex;
+         flex-wrap: wrap;
+         gap: 24px;
+      }
+      
+   
+   
+   
+      .card-content {
+         padding: 32px 16px;
+         background-color: #FFFFFF;
+         text-align: center;
+         box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+         border-radius: 0px 0px 4px 4px;
+         overflow: hidden;
+   
+      }
+   
+      .team-list {
+         background-color: #F4F4FD;
+      }
+      .subtitle {
+         justify-content: center;
+         text-align: center;
+         font-family: 'Roboto';
+         font-weight: 700;
+         font-size: 36px;
+         line-height: 1.11;
+         letter-spacing: 0.02em;
+         text-transform: capitalize;
+         color: #2E2F42;
+         margin-bottom: 8px;
+   
+      }
+   
+      .about-us {
+         margin-top: 96px;
+         margin-bottom: 96px;
+   
+      }
+   
+      .text-title {
+         margin-bottom: 72px;
+         font-family: 'Roboto';
+         font-weight: 500;
+         font-size: 16px;
+         line-height: 1.5;
+         letter-spacing: 0.02em;
+         color: #434455;
+   
+      }
+} */
 
-@media screen and (min-width:768px){
+/* @media screen and (min-width:768px){
    .container{
       width: 766px;
       margin-left: auto;
       margin-right: auto;
    }
-}
-@media screen and (min-width:1200px) {
+
+      .mobile-menu {
+         display: none;
+      }
+   
+      .mobile-menu-open {
+         display: none;
+      }
+
+
+      .main-nav {
+         display: flex;
+         align-items: center;
+      }
+   
+      .menu {
+         display: flex;
+         align-items: center;
+      }
+            .logo {
+               font-family: 'Raleway', sans-serif;
+               font-weight: 700;
+               font-size: 18px;
+               line-height: 1.33;
+               letter-spacing: 0.03em;
+               text-transform: uppercase;
+               color: var(--main-color);
+               margin-right: 120px;
+            }
+      
+            .logo .web {
+               color: #4D5AE5;
+            }
+      
+            .menu-item:not(:last-child) {
+               margin-right: 40px;
+            }
+      
+            .menu-link {
+               font-weight: var(--primary-font-weight);
+               font-size: 16px;
+               line-height: 1.5;
+               letter-spacing: 0.02em;
+               color: var(--main-color);
+               transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+               position: relative;
+      
+            }
+      
+            .menu-link:hover,
+            .menu-link:focus {
+               color: #4D5AE5;
+            }
+      
+            .menu-link.current-page::after {
+               display: block;
+               position: absolute;
+               content: '';
+               width: 100%;
+               height: 4px;
+               background: #404BBF;
+               bottom: 0;
+               border-radius: 2px;
+               left: 0px;
+               top: 40px;
+      
+            }
+      
+            .menu-link:active {
+               color: black;
+            }
+            .contacts-item {
+               display: block;
+               align-items: center;
+               margin-left: auto; 
+            }
+      
+      .contacts {
+         font-size: 16px;
+         line-height: 1.5;
+         letter-spacing: 0.02em;
+         color: #434455;
+         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      }
+   
+      .contacts:hover,
+      .contacts:focus {
+         color: #4D5AE5;
+      }
+   
+      .contacts-list: {
+         margin-right: 16px;
+         margin-left: 118px;
+      }
+   
+      .list-email {
+         margin-bottom: 4px;
+      }
+   
+      .list-tel {
+         margin-bottom: 10px;
+      } */
+      /* ======= HERO======= */
+            /* .hero {
+               max-width: 768px;
+               height: 436px;
+               margin-left: auto;
+               margin-right: auto;
+               background-repeat: no-repeat;
+               background-position: center;
+               background-size: cover;
+               background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                     rgba(46, 47, 66, 0.7)),
+                  url('../images/herotablet.jpg');
+               background-color: #434455;
+      
+            }
+      
+            @media (min-device-pixel-ratio: 2),
+            (min-resolution: 192dpi),
+            (min-resolution: 2dppx) {
+               .hero {
+                  background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                        rgba(46, 47, 66, 0.7)),
+                     url('../images/herotablet@2x.jpg');
+                  background-color: #434455;
+               }
+            } */
+            /*============= our team=========== */
+         /* .workers-list {
+         display: flex;
+         flex-wrap: wrap;
+         gap: 24px;
+       }
+            
+      .card-content {
+          padding: 32px 16px;
+         background-color: #FFFFFF;
+         text-align: center;
+         box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+         border-radius: 0px 0px 4px 4px;
+         overflow: hidden
+                        }
+            
+      .team-list {
+      background-color: #F4F4FD;
+                        }
+         } */
+
+
+/* @media screen and (min-width:1200px) {
    .container {
       width: 1158px;}
+            .section {
+               padding-top: 120px;
+               padding-bottom: 120px;
+            }
+            .logo {
+               margin-right: 77px;
+      
+            }
+      
+            .contacts-item {
+               display: flex;
+               align-items: center;
+               margin-left: auto;
+            }
+      
+            .contacts-list:not(:last-child) {
+               margin-right: 40px;
+            } */
+            /*  ===============HEro================= */
+                        /* .hero {
+                           max-width: 1440px;
+                           height: 600px;
+                           margin-left: auto;
+                           margin-right: auto;
+                           background-repeat: no-repeat;
+                           background-position: center;
+                           background-size: cover;
+                           background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                                 rgba(46, 47, 66, 0.7)),
+                              url('../images/heroimage.jpg');
+                           background-color: #434455;
+            
+                        }
+            
+                        @media (min-device-pixel-ratio: 2),
+                        (min-resolution: 192dpi),
+                        (min-resolution: 2dppx) {
+                           .hero {
+                              background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                                    rgba(46, 47, 66, 0.7)),
+                                 url('../images/heroimage@2x.jpg');
+                              background-color: #434455;
+                           }
+            
+                        } */
+ /*========== OUR TEAM=============== */ 
+   /* .workers-list{
+   display: flex;
+   flex-wrap: wrap;
+      gap: 24px;
+}
+.card-content {
+   padding: 32px 16px;
+   background-color: #FFFFFF;
+   text-align: center;
+   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+      border-radius: 0px 0px 4px 4px;
+      overflow: hidden;
+
+}
+
+.team-list{
+   background-color:  #F4F4FD;;
+}
+.secondary-title{
+      font-weight: var(--primary-font-weight);
+      font-size: 36px;
+      line-height: 1.11;
+      letter-spacing: 0.02em;
+      color: var(--main-color);
+      margin-bottom: 69px;
+      text-align: center;
+      
+}
+.subtitle{
+      font-weight: var(--primary-font-weight);
+      font-size: 20px;
+      line-height: 1.2;
+   color: var(--main-color);
+   margin-bottom: 8px;
+   
+}
+.text-title{
+      font-size: 16px;
+      line-height: 1.5;
+      letter-spacing: 0.02em;
+      color: #434455;
+      margin-bottom: 8px;
+}
+.social-list{
+   display: flex;
+   justify-content: center;
+   gap: 24px;
+}
+.social-list-link:hover,
+.social-list-link:focus{
+   background-color:#404BBF;
+}
+   .social-list-icon{
+      fill: #FFFFFF;
    }
+.social-list-link{
+   display:flex;
+   justify-content: center;
+   align-items: center;
+   width: 40px;
+   height: 40px;
+   border-radius: 50%;
+   background-color:#4D5AE5;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   
+}
+   } */
 
 /* LOGO */
 
@@ -377,7 +808,7 @@ color: #4D5AE5;
 } */
 /* menu-mobile */
 /* 0-767px */
-@media screen and (min-width:480px){
+/* @media screen and (min-width:480px){ */
 /* .menu{ display: none;}
 .contacts-item{
    display: none;
@@ -474,7 +905,7 @@ color: #4D5AE5;
 
 } */
 
-@media (min-device-pixel-ratio: 2),
+/* @media (min-device-pixel-ratio: 2),
 (min-resolution: 192dpi),
 (min-resolution: 2dppx) {
    .hero {
@@ -484,8 +915,8 @@ color: #4D5AE5;
       background-color: #434455;
    }
    
-}
-.main-title {
+} */
+/* .main-title {
    font-weight: var(--primary-font-weight);
    font-size: 36px;
    line-height: 1.11;
@@ -497,9 +928,9 @@ color: #4D5AE5;
    justify-content: center;
 text-transform: capitalize;
 padding-top: 112px;
-      /* padding-bottom: 240px;
-    */
-}
+      padding-bottom: 240px;
+   
+} */
 /* .hero-button {
    padding-top: 16px;
    padding-bottom: 16px;
@@ -527,7 +958,7 @@ padding-top: 112px;
 .discr{
    justify-content: center;
 } */
-.about-us-container{
+/* .about-us-container{
    display: none;
 }
 .subtitle{
@@ -545,11 +976,7 @@ padding-top: 112px;
          margin-bottom: 8px;
          
 }
-.about-us{
-   margin-top: 96px;
-   margin-bottom: 96px;
-   
-}
+
 .text-title{
    margin-bottom: 72px;
    font-family: 'Roboto';
@@ -559,14 +986,14 @@ padding-top: 112px;
       letter-spacing: 0.02em;
       color: #434455;
    
-}
-.team-list{
+} */
+/* .team-list{
    justify-content: center;
 }
    
 .workers-list {
-   /* display: flex;
-   flex-wrap: wrap; */
+   display: flex;
+   flex-wrap: wrap;
    gap: 24px;
    
 }
@@ -595,9 +1022,9 @@ padding-top: 112px;
    margin-bottom: 69px;
    text-align: center;
 
-}
+} */
 
-.subtitle {
+/* .subtitle {
    font-weight: var(--primary-font-weight);
    font-size: 20px;
    line-height: 1.2;
@@ -612,9 +1039,9 @@ padding-top: 112px;
    letter-spacing: 0.02em;
    color: #434455;
    margin-bottom: 8px;
-}
+} */
 
-.social-list {
+/* .social-list {
    display: flex;
    justify-content: center;
    gap: 24px;
@@ -639,30 +1066,30 @@ padding-top: 112px;
    background-color: #4D5AE5;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-}
+} */
 
-}
+
 
 
 
 /*  TAblet styles */
 
-@media screen and (min-width:768px){
-   .mobile-menu{
+/* @media screen and (min-width:768px){} */
+   /* .mobile-menu{
       display: none;
    }
    .mobile-menu-open{
       display: none;
-   }
-      .main-nav {
+   } */
+      /* .main-nav {
          display: flex;
          align-items: center;
       }
             .menu {
                display: flex;
                align-items: center;
-            }
-                        .logo {
+            } */
+                        /* .logo {
                            font-family: 'Raleway', sans-serif;
                            font-weight: 700;
                            font-size: 18px;
@@ -712,13 +1139,13 @@ padding-top: 112px;
       
             .menu-link:active {
                color: black;
-            }
+            } */
     /* .contacts-item{
    display: flex;
       align-items: center;
       margin-left: auto;
 } */
-.contacts{
+/* .contacts{
       font-size: 16px;
       line-height: 1.5;
       letter-spacing: 0.02em;
@@ -740,23 +1167,23 @@ padding-top: 112px;
 }
 .list-tel{
    margin-bottom: 10px;
-}
-.top-line {
+} */
+/* .top-line {
 
 
    background: #FFFFFF;
    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
       0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 
-}
+} */
 
 
-}
+
 
 
 /* ======dextop==== */
 
-@media screen and (min-width:1200px) {
+/* @media screen and (min-width:1200px) {
    
    .logo{
       margin-right: 77px;
@@ -771,7 +1198,7 @@ padding-top: 112px;
                margin-right: 40px;
             }
             
-}
+} */
 
 
 
@@ -909,6 +1336,8 @@ background-size:cover;
 /* ===================ABOUT US============== */
 /* .about-us{
    display: flex;
+   flex-wrap: wrap;
+   
 } */
 
 /* .discr:not(:last-child){
@@ -1020,12 +1449,17 @@ display: flex;
 /* =============CUSTOMERS ==========*/
 
 
-/* .customer-list{
+ /* .customer-list{
    display: flex;
+   flex-wrap: wrap;
    justify-content: center;
-   gap: 24px;
+   column-gap: 16px;
+   row-gap: 72px;
 }
-.customer-list-link{
+.customer-listt{
+   width: calc((100%-16px)/2);
+} */
+/*.customer-list-link{
    width: 168px;
    height: 88px;
    display: flex;
