--- a/css/desktop.css
+++ b/css/desktop.css
@@ -97,7 +97,6 @@
       
             .team-list {
                background-color: #F4F4FD;
-               ;
             }
       
             .secondary-title {
@@ -156,39 +155,107 @@
             }
             }
 
-            /* =======Customers===== */
-                        /* .customer-list {
-                           display: flex;
-                           flex-wrap: nowrap;
+            @media (min-width: 1200px) and (max-width: 2000px){
+                        .subtitle {
                            justify-content: center;
-                           gap: 24px;
+                           text-align: center;
+                           font-family: 'Roboto';
+                           font-weight: 500;
+                           font-size: 20px;
+                           line-height: 1.2;
+                           letter-spacing: 0.02em;
+                           color: #2E2F42;
+                           margin-bottom: 8px;
                         }
-            
-                        .customer-list-link {
-                           width: 168px;
-                           height: 88px;
-                           display: flex;
-                           justify-content: center;
-                           align-items: center;
-                           transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-                        }
-            
-                        .customer-list-link:hover .customer-list-icon,
-                        .customer-list-link:focus .customer-list-icon {
-                           fill: #4D5AE5;
-                        }
-            
-                        .customer-list-icon {
-                           border: 1px solid #8E8F99;
-                           border-radius: 4px;
-                           width: 168px;
-                           height: 88px;
-                           padding: 16px, 32px;
-                           fill: #8E8F99;
-                           transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-                        }
-            
-                        .customer-list-link .customer-list-icon:hover,
-                        .customer-list-icon:focus {
-                           border: 1px solid #4D5AE5;
-                        } */
+                        .text-title {
+                           font-family: 'Roboto';
+                           font-weight: 400;
+                           font-size: 16px;
+                           line-height: 1.5;
+                           letter-spacing: 0.02em;
+                           color: #434455;
+                           margin-bottom: 0px;
+                     }
+/* ==============ABOUT US============= */
+
+ .about-us{
+   display: flex;
+   /* flex-wrap:nowrap; */
+   
+} 
+ .discr:not(:last-child){
+   margin-right: 24px;
+}
+.discr{
+   margin-bottom: 0px;
+   width: 264px;
+      height: 224px;
+      
+}
+.about-us-container{
+   box-sizing: border-box;
+   display: block;
+   content:'' ;
+   height: 112px;
+   width: 264px;
+   background-color:#F4F4FD;
+   margin-bottom: 8px;
+}
+
+.about-us-link{
+   display: flex;
+      justify-content: center;
+      align-items: center;
+      padding-left: 100px;
+      padding-right: 100px;
+      padding-top: 24px;
+      padding-bottom: 24px;
+} 
+                  }
+                  /* =======what we are doing===== */
+  .work-list {
+     display: flex;
+
+  }
+
+  .work-list-photo:not(:last-child) {
+     margin-right: 24px;}
+.secondary-title{ 
+   font-weight: 700;
+}
+/* ============Customers======= */
+ .customer-list {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    gap: 24px;
+ }
+
+ .customer-list-link {
+    width: 168px;
+    height: 88px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
+
+ .customer-list-link:hover .customer-list-icon,
+ .customer-list-link:focus .customer-list-icon {
+    fill: #4D5AE5;
+ }
+
+ .customer-list-icon {
+    border: 1px solid #8E8F99;
+    border-radius: 4px;
+    width: 168px;
+    height: 88px;
+    padding: 16px, 32px;
+    fill: #8E8F99;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
+
+ .customer-list-link .customer-list-icon:hover,
+ .customer-list-icon:focus {
+    border: 1px solid #4D5AE5;
+ }
