--- a/css/styles.css
+++ b/css/styles.css
@@ -297,6 +297,16 @@ margin: 0;
       width: 100%;
       justify-content: center;
    }
+      .workers-name{
+         font-family: 'Roboto';
+            font-weight: 500;
+            font-size: 20px;
+            line-height: 1.2;
+            text-align: center;
+               letter-spacing: 0.02em;
+               color: #2E2F42;
+               margin-bottom: 8px;
+      }
 
 .card-content {
    padding: 32px 16px;
@@ -340,6 +350,7 @@ margin: 0;
    display: flex;
    justify-content: center;
    gap: 24px;
+   margin-top: 8px;
 }
 .social-list-link:hover,
 .social-list-link:focus{
