--- a/css/desktop.css
+++ b/css/desktop.css
@@ -273,4 +273,155 @@ margin-right: 24px;}
  .customer-list-link .customer-list-icon:hover,
  .customer-list-icon:focus {
     border: 1px solid #4D5AE5;
- } */}
+ } */
+
+/*================= Footer======= */
+.footer {
+   background-color: var(--bgc-main);
+   padding-top: 100px;
+   padding-bottom: 188px;
+   display: flex;
+
+}
+
+.footer-text {
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   color: #E7E9FC;
+   display: flex;
+   margin-top: 16px;
+   width: 264px;
+   height: 72px;
+
+}
+
+.logo-fone-dark {
+   color: #F4F4FD;
+}
+
+.footer-title {
+   font-family: 'Roboto', sans-serif;
+   font-weight: 600;
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   color: #FFFFFF;
+   display: flex;
+   justify-content: center;
+   text-align: center;
+   margin-bottom: 16px;
+}
+
+.footer-list {
+   display: flex;
+   justify-content: center;
+   gap: 16px;
+
+}
+
+.footer-list-link {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width: 40px;
+   height: 40px;
+   border-radius: 50%;
+   background-color: #434455;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.footer-list-link:hover,
+.footer-list-link:focus {
+   background-color: #31D0AA;
+}
+
+
+.footer-list-icon {
+   fill: #F4F4FD;
+
+}
+
+/* ===== footer position====== */
+.footer-container {
+   display: flex;
+
+}
+
+
+.social-media {
+   margin-right: 80px;
+
+
+}
+
+.logo-text {
+   margin-right: 80px;
+   margin-left: 80px;
+   display: block;
+
+} 
+
+/* ============FOOTER MODAL============ */
+
+.modal-form-text {
+   font-family: 'Roboto';
+   font-weight: 500;
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   color: #FFFFFF;
+   margin-bottom: 16px;
+}
+
+.button-footer-modal {
+   background: #4D5AE5;
+   border-radius: 4px;
+   border: none;
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   align-items: center;
+   padding: 8px 24px;
+   gap: 16px;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-footer-modal:hover,
+.button-footer-modal:focus {
+   background-color: #404bbf;
+   outline: none;
+
+}
+
+.footer-modal-form {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.footer-button-subscribe {
+   width: 77px;
+   height: 24px;
+   font-family: 'Roboto';
+   font-weight: 500;
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.04em;
+   color: #FFFFFF;
+}
+
+
+.imput-modal-footer {
+   border: 1px solid rgba(255, 255, 255, 0.3);
+   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+   border-radius: 4px;
+   width: 264px;
+   height: 40px;
+   background-color: transparent;
+   margin-right: 24px;
+   color: #E7E9FC;
+   padding-left: 16px;
+}
+}
