--- a/css/tablet.css
+++ b/css/tablet.css
@@ -2,7 +2,7 @@
    
       
    .container {
-      width: 766px;
+      max-width: 766px;
       margin-left: auto;
       margin-right: auto;
    }
@@ -112,7 +112,7 @@
    }
        /* ======= HERO======= */
 .hero {
-max-width: 768px;
+/* max-width: 768px; */
 height: 436px;
 margin-left: auto;
 margin-right: auto;
@@ -217,5 +217,9 @@ url('../images/herotablet.jpg');
    width: 356px;
    height: 120px;
    }
+.secondary-title{
+   text-align: center;
+   margin-bottom: 69px;
 
+}
 }
