--- a/css/styles.css
+++ b/css/styles.css
@@ -371,21 +371,12 @@ margin: 0;
    
 } 
 /* ===================CUSTOMERS================ */
-  /* .customer-list {
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 16px;
-    row-gap: 72px;
-    justify-content: center;
- }  */
+
  @media screen and (max-width: 767px){
 
    .wwad-none {
          display: none;
       }
-      
-         
-      
       
    .secondary-title {
          font-weight: 700;
@@ -413,32 +404,222 @@ margin: 0;
    margin-right: 0px;
  }
  /* ======footer===== */
+.footer {
+   background-color: var(--bgc-main);
+   padding-top: 100px;
+   padding-bottom: 96px;
 
- .footer-text {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #E7E9FC;
-    margin-top: 16px;
-   /* justify-content: center; */
-   /* display: flex; */
+
+}
+
+.footer-text {
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   color: #E7E9FC;
+   display: block;
+   margin-top: 16px;
+   margin-left: auto;
+   margin-right: auto;
+   width: 268px;
+}
+
+.logo-fone-dark {
+   color: #F4F4FD;
+}
+
+.logo-footer {
+   font-family: 'Raleway', sans-serif;
+   font-weight: 700;
+   font-size: 18px;
+   line-height: 1.33;
+   letter-spacing: 0.03em;
+   text-transform: uppercase;
+   color: var(--main-color);
+   justify-content: center;
+   display: flex;
+
+}
+
+.logo-footer .web {
+   color: #4D5AE5;
+}
+
+
+.footer-title {
+   font-family: 'Roboto', sans-serif;
+   font-weight: 600;
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   color: #FFFFFF;
+   display: flex;
+   justify-content: center;
    text-align: center;
-      
+   margin-bottom: 16px;
+}
+
+.footer-list {
+   display: flex;
+   justify-content: center;
+   gap: 16px;
+
+}
+
+.footer-list-link {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width: 40px;
+   height: 40px;
+   border-radius: 50%;
+   background-color: #434455;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.footer-list-link:hover,
+.footer-list-link:focus {
+   background-color: #31D0AA;
+}
+
+
+.footer-list-icon {
+   fill: #F4F4FD;
+
+}
+/* =================== */
+
+.modal-form-text {
+   font-family: 'Roboto';
+   font-weight: 500;
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   color: #FFFFFF;
+   margin-bottom: 16px;
+   text-align: center;
+}
+
+.button-footer-modal {
+   background: #4D5AE5;
+   border-radius: 4px;
+   border: none;
+   display: flex;
+   text-align: center;
+   margin-left: auto;
+   margin-right: auto;
+   padding: 8px 24px;
+   margin-top: 16px;
+   gap: 16px;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-footer-modal:hover,
+.button-footer-modal:focus {
+   background-color: #404bbf;
+   outline: none;
+
+}
+
+.footer-modal-form {
+   display: block;
+   justify-content: center;
+   align-items: center;
+}
+
+.footer-button-subscribe {
+   width: 77px;
+   height: 24px;
+   font-family: 'Roboto';
+   font-weight: 500;
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.04em;
+   color: #FFFFFF;
+
+}
+
+
+.imput-modal-footer {
+   border: 1px solid rgba(255, 255, 255, 0.3);
+   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+   border-radius: 4px;
+   width: 100%;
+   height: 40px;
+   background-color: transparent;
+   margin-right: 24px;
+   color: #E7E9FC;
+   padding-left: 16px;
+}
+.footer-container {
+   flex-direction: column;
+}
+
+
+.social-media {
+   margin-bottom: 72px;
+}
+
+.logo-text {
+   display: block;
+   margin-bottom: 72px;
+
+
+}
+
+
+   
+
+/* .footer-text {
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   color: #E7E9FC;
+   display: block;
+   margin-top: 16px;
+   margin-left: auto;
+   margin-right: auto;
+   width: 268px;
  }
  .logo-text {
-    /* margin-right: 80px;
-    margin-left: 80px; */
-    /* display: block; */
-    /* width: 268px;
-    height: 110px; */
     margin-bottom: 72px;
     
-   
  }
  .discr-modal-form{
    flex-direction: column;
  }
-}
+.button-footer-modal {
+   background: #4D5AE5;
+   border-radius: 4px;
+   border: none;
+   display: flex;
+   text-align: center;
+   margin-left: auto;
+   margin-right: auto;
+   padding: 8px 24px;
+   margin-top: 16px;
+   gap: 16px;}
+
+      .social-media {
+         margin-bottom: 72px;
+      }
+            .imput-modal-footer {
+               border: 1px solid rgba(255, 255, 255, 0.3);
+               filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+               border-radius: 4px;
+               width: 100%;
+               height: 40px;
+               background-color: transparent;
+               margin-right: 24px;
+               color: #E7E9FC;
+               padding-left: 16px;
+            } */
+
+
+
+
+   }
 
 .customer-list-link{
    display: flex;
@@ -1654,7 +1835,7 @@ margin-bottom: 48px;
    color: #FFFFFF;
 }
 /* Footer */
-.footer{
+/* .footer{
    background-color: var(--bgc-main);
    padding-top: 100px;
    padding-bottom: 96px;
@@ -1670,7 +1851,6 @@ margin-bottom: 48px;
       margin-top: 16px;
       margin-left: auto;
       margin-right: auto;
-      
       width: 268px;
    }
          
@@ -1734,32 +1914,27 @@ margin-bottom: 48px;
 .footer-list-icon{
    fill: #F4F4FD;
    
-}
+} */
 /* ===== footer position====== */
 
-.footer-container {
+/* .footer-container {
    flex-direction: column;
 }
 
 
 .social-media{
-   /* margin-right: 110px;
-   margin-left: 110px;
-    */
-    margin-bottom: 72px;
-
+   margin-bottom: 72px;
 }
+
 .logo-text {
    display: block;
-   /* width: 268px;
-   height: 110px; */
    margin-bottom: 72px;
    
    
-}
+} */
 
 /* ============FOOTER MODAL============ */
-.modal-form-text{
+/* .modal-form-text{
 font-family: 'Roboto';
 font-weight: 500;
 font-size: 16px;
@@ -1776,9 +1951,6 @@ text-align: center;
       border: none;
       display: flex; 
       text-align: center;
-         /* flex-direction: row; */
-         /* justify-content: center; */
-         /* align-items: center; */
          margin-left: auto;
          margin-right: auto;
          padding: 8px 24px;
@@ -1793,9 +1965,9 @@ text-align: center;
    
 }
 .footer-modal-form{
-   /* display:block;
+   display:block;
    justify-content: center;
-   align-items: center; */
+   align-items: center;
 }
 .footer-button-subscribe{
    width: 77px;
@@ -1821,7 +1993,7 @@ text-align: center;
       color: #E7E9FC;
       padding-left: 16px;
 }
-
+ */
 
 /* ==============MODAL WINDOW================ */
 .backdrop{
