--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,9 @@ margin: 0;
    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
    top: 0;
    left: 0;
+   background-color: yellowgreen;
+  
+   padding-bottom: 40px;
 
    opacity: 0;
    visibility: hidden;
@@ -208,7 +211,7 @@ margin: 0;
    
 }
 
-.hero-button {
+ .hero-button {
    padding-top: 16px;
    padding-bottom: 16px;
    padding-left: 32px;
@@ -225,6 +228,7 @@ margin: 0;
    margin: 0 auto;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
    border: none;
+   
 }
 
 .hero-button:hover,
@@ -232,7 +236,7 @@ margin: 0;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
    background-color: #404BBF;
 }
-
+ 
 
 
 
@@ -1505,7 +1509,7 @@ padding-top: 112px;
 } */
 
 /* ==================HERO =============*/
-/* .hero{
+ /* .hero{
    max-width: 1440px;
       height: 600px;
       margin-left: auto;
@@ -1540,9 +1544,9 @@ background-size:cover;
       color: #FFFFFF;
       text-align: center;
       margin-bottom: 48px;
-   
-}
-.hero-button{
+    */
+
+/* .hero-button{
    padding-top: 16px;
    padding-bottom: 16px;
    padding-left: 32px;
@@ -1564,8 +1568,7 @@ background-size:cover;
 .hero-button:focus{
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
    background-color: #404BBF;
-} */
-
+}  */
 /* ================= CARD CONTENT========== */
 
 
@@ -2085,8 +2088,7 @@ outline: none;
 .modal-form{
    display: flex;
    flex-direction: column;
-   /* margin-top: 24px; */
-   
+  
    
    
 }
