--- a/css/styles.css
+++ b/css/styles.css
@@ -101,18 +101,22 @@ margin: 0;
    max-height: 796px;
    z-index: 1000;
    background-color: #FFFFFF;
+   padding-top: 48px;
+   padding-bottom: 48px;
    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
    top: 0;
    left: 0;
-   background-color: yellowgreen;
-  
-   padding-bottom: 40px;
-
    opacity: 0;
    visibility: hidden;
    pointer-events: none;
    transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1),
       visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobile-menu .container{
+   display: flex;
+   height: 100%;
+   flex-direction: column;
+   justify-content: space-between;
 }
 
 .mobile-menu.is-open {
@@ -124,19 +128,83 @@ margin: 0;
 
 .mobile-menu-container {
    position: relative;
-   padding-left: 40px;
-   padding-bottom: 40px;
-   padding-top: 40px;
+   
 }
 
+
 .mobile-menu-close-btn {
-   position: absolute;
-   top: 25px;
-   right: 20px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
    background-color: transparent;
-   border: none;
-   padding: 0;
-   line-height: 0;
+   border: 1px solid rgba(0, 0, 0, 0.1);
+   padding: 8px;
+   width: 24px;
+   height: 24px;
+   border-radius: 50%;
+   cursor: pointer;
+   background-color: #E7E9FC;
+   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   outline: none;
+   margin-bottom: 16px;
+   margin-left: auto;
+   
+
+
+}
+
+.mobile-menu-close-btn:hover,
+.mobile-menu-close-btn:focus {
+   border-color: #FFFFFF;
+   background-color: #4D5AE5;;
+}
+
+.mobile-menu-close-btn-icon {
+   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu-close-btn:hover .mobile-menu-close-btn-icon,
+.mobile-menu-close-btn:focus .mobile-menu-close-btn-icon {
+   fill: #FFFFFF;
+
+}
+.mobile-menu-list{
+ 
+}
+.mobile-menu-item{}
+.mobile-menu-link{
+   font-family: 'Roboto';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 36px;
+      line-height: 1.11;
+      letter-spacing: 0.02em;
+         text-transform: capitalize;
+         color: #2E2F42;
+}
+.mobile-menu-item:not(:last-child){
+   margin-bottom: 40px;
+}
+
+.contacts-mobile-item{
+   
+}
+.mobile-list-email{
+   font-family: 'Roboto';
+   font-weight: 500;
+   font-size: 20px;
+   line-height: 1.2;
+   letter-spacing: 0.02em;
+   color: #434455;
+
+} 
+.mobile-list-tel{
+   font-family: 'Roboto';
+   font-weight: 600;
+   font-size: 36px;
+   line-height: 1.11;
+color: #4D5AE5;
+margin-bottom: 40px;
 }
 
 /*===============HEADER===========*/
