--- a/css/styles.css
+++ b/css/styles.css
@@ -101,8 +101,8 @@ margin: 0;
    max-height: 796px;
    z-index: 1000;
    background-color: #FFFFFF;
-   padding-top: 48px;
-   padding-bottom: 48px;
+   padding-top: 40px;
+   padding-bottom: 40px;
    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
    top: 0;
    left: 0;
@@ -174,30 +174,40 @@ margin: 0;
 .mobile-menu-item{}
 .mobile-menu-link{
    font-family: 'Roboto';
-      font-style: normal;
       font-weight: 700;
       font-size: 36px;
       line-height: 1.11;
       letter-spacing: 0.02em;
-         text-transform: capitalize;
          color: #2E2F42;
+}
+.contact-blue{
+   color: #404BBF;
 }
 .mobile-menu-item:not(:last-child){
    margin-bottom: 40px;
 }
 
 .contacts-mobile-item{
-   
+   margin-bottom: 40px;
 }
-.mobile-list-email{
+.contacts-em{
    font-family: 'Roboto';
-   font-weight: 500;
-   font-size: 20px;
-   line-height: 1.2;
-   letter-spacing: 0.02em;
-   color: #434455;
+      font-weight: 500;
+      font-size: 20px;
+      line-height: 1.2;
+      letter-spacing: 0.02em;
+      color: #434455;
 
-} 
+}
+
+/* .contacts-mobile{
+   font-family: 'Roboto';
+      font-weight: 500;
+      font-size: 20px;
+      line-height: 1.2;
+      letter-spacing: 0.02em;
+      color: #434455;
+} */
 .mobile-list-tel{
    font-family: 'Roboto';
    font-weight: 600;
