--- a/css/styles.css
+++ b/css/styles.css
@@ -168,10 +168,8 @@ margin: 0;
    fill: #FFFFFF;
 
 }
-.mobile-menu-list{
- 
-}
-.mobile-menu-item{}
+
+
 .mobile-menu-link{
    font-family: 'Roboto';
       font-weight: 700;
@@ -200,14 +198,7 @@ margin: 0;
 
 }
 
-/* .contacts-mobile{
-   font-family: 'Roboto';
-      font-weight: 500;
-      font-size: 20px;
-      line-height: 1.2;
-      letter-spacing: 0.02em;
-      color: #434455;
-} */
+
 .mobile-list-tel{
    font-family: 'Roboto';
    font-weight: 600;
@@ -284,8 +275,7 @@ margin-bottom: 40px;
    align-items: center;
    justify-content: center;
    text-transform: capitalize;
-   /* padding-top: 112px; */
-   /* padding-bottom: 240px; */
+   
    
 }
 
@@ -360,16 +350,6 @@ margin-bottom: 40px;
 }
 
 
-/* .text-title {
-   font-family: 'Roboto';
-   font-weight: 500;
-   font-size: 16px;
-   line-height: 1.5;
-   letter-spacing: 0.02em;
-   color: #434455;
-
-} */
-
 
 /* =====+=========OUR TEAM=========== */
 .workers-list{
@@ -403,31 +383,7 @@ margin-bottom: 40px;
 .team-list{
    background-color:  #F4F4FD;
 }
-/* .secondary-title {
-   font-weight: var(--primary-font-weight);
-   font-size: 36px;
-   line-height: 1.11;
-   letter-spacing: 0.02em;
-   color: var(--main-color);
-   margin-bottom: 69px;
-   text-align: center;
-} */
-/* 
-.subtitle{
-      font-weight: var(--primary-font-weight);
-      font-size: 20px;
-      line-height: 1.2;
-   color: var(--main-color);
-   margin-bottom: 8px;
-   
-}
-.text-title{
-      font-size: 16px;
-      line-height: 1.5;
-      letter-spacing: 0.02em;
-      color: #434455;
-      margin-bottom: 8px;
-} */
+
 .social-list{
    display: flex;
    justify-content: center;
@@ -646,67 +602,16 @@ margin-bottom: 40px;
 .logo-text {
    display: block;
    margin-bottom: 72px;
-
-
 }
-
-
-   
-
-/* .footer-text {
-   font-size: 16px;
-   line-height: 1.5;
-   letter-spacing: 0.02em;
-   color: #E7E9FC;
-   display: block;
-   margin-top: 16px;
-   margin-left: auto;
-   margin-right: auto;
-   width: 268px;
- }
- .logo-text {
-    margin-bottom: 72px;
-    
- }
- .discr-modal-form{
-   flex-direction: column;
- }
-.button-footer-modal {
-   background: #4D5AE5;
-   border-radius: 4px;
-   border: none;
-   display: flex;
-   text-align: center;
-   margin-left: auto;
-   margin-right: auto;
-   padding: 8px 24px;
-   margin-top: 16px;
-   gap: 16px;}
-
-      .social-media {
-         margin-bottom: 72px;
-      }
-            .imput-modal-footer {
-               border: 1px solid rgba(255, 255, 255, 0.3);
-               filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-               border-radius: 4px;
-               width: 100%;
-               height: 40px;
-               background-color: transparent;
-               margin-right: 24px;
-               color: #E7E9FC;
-               padding-left: 16px;
-            } */
-
-
-
+.customer-list-link{
+   align-items: center;
+}
 
    }
 
 .customer-list-link{
    display: flex;
    justify-content: center;
-   align-items: center;
    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .customer-list-link:hover .customer-list-icon,
